--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -13,6 +13,9 @@ loguru = "^0.5.3"
 Flask-Mail = "^0.9.1"
 Flask-WTF = "^1.0.0"
 email-validator = "^1.1.3"
+jwt = "^1.3.1"
+Flask-HTTPAuth = "^4.5.0"
+Flask-Login = "^0.5.0"
 
 [tool.poetry.dev-dependencies]
 
