--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 database/**
 database-js/**
-src/blueprints/__pychache__/**
-src/__pychache__/**
-legacy/**
+# src/blueprints/__pychache__/**
+# src/__pychache__/**
+# legacy/**
 tasks.txt
