--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+backports.zoneinfo==0.2.1
 cachelib==0.6.0
 click==8.0.3
 Flask==2.0.2
@@ -9,5 +10,7 @@ gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
+psycopg==3.0.8
+psycopg2-binary==2.9.3
 SQLAlchemy==1.4.31
 Werkzeug==2.0.2
