--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 backports.zoneinfo==0.2.1
 cachelib==0.6.0
+cffi==1.15.0
 click==8.0.3
+cryptography==36.0.1
 Flask==2.0.2
 Flask-Login==0.5.0
 Flask-Session==0.4.0
@@ -12,5 +14,7 @@ Jinja2==3.0.3
 MarkupSafe==2.0.1
 psycopg==3.0.8
 psycopg2-binary==2.9.3
+pycparser==2.21
+pyOpenSSL==22.0.0
 SQLAlchemy==1.4.31
 Werkzeug==2.0.2
