--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Flask==2.0.2
 Flask-Login==0.5.0
 Flask-Session==0.4.0
 Flask-SQLAlchemy==2.5.1
+flask-swagger-ui==3.36.0
 greenlet==1.1.2
 gunicorn==20.1.0
 importlib-resources==5.4.0
