--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "typescript.tsdk": "node_modules\\typescript\\lib"
+  "cSpell.words": [
+    "Войти",
+    "должны",
+    "Неверный",
+    "Пароли",
+    "Повторите",
+    "совпадать",
+    "signin"
+  ]
 }
