--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.8.8",
     "axios": "^0.25.0",
     "classnames": "^2.3.1",
     "dayjs": "^1.10.7",
+    "joi": "^17.6.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
     "next": "12.0.10",
@@ -22,7 +24,9 @@
     "react-hook-form": "^7.25.3",
     "react-responsive": "^9.0.0-beta.6",
     "react-transition-group": "^4.4.2",
-    "sharp": "^0.30.1"
+    "sharp": "^0.30.1",
+    "swr": "^1.2.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "17.0.14",
