--- a/package.json
+++ b/package.json
@@ -12,23 +12,21 @@
     "axios": "^0.25.0",
     "classnames": "^2.3.1",
     "dayjs": "^1.10.7",
-    "joi": "^17.6.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
     "next": "12.0.10",
-    "next-connect": "^0.11.1",
     "next-pwa": "^5.4.4",
     "react": "17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.25.3",
-    "react-responsive": "^9.0.0-beta.6",
     "react-transition-group": "^4.4.2",
     "sharp": "^0.30.1",
     "swr": "^1.2.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/holderjs": "^2.9.2",
     "@types/node": "17.0.14",
     "@types/react": "17.0.39",
     "@types/react-transition-group": "^4.4.4",
