--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-pwa": "^5.4.4",
     "react": "17.0.2",
     "react-bootstrap": "^2.1.2",
+    "react-custom-scrollbars-2": "^4.4.0",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.25.3",
     "react-responsive": "^9.0.0-beta.6",
