--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dayjs": "^1.10.7",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
-    "next": "12.0.10",
+    "next": "^12.1.0",
     "next-pwa": "^5.4.4",
     "react": "17.0.2",
     "react-bootstrap": "^2.1.2",
