--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-custom-scrollbars-2": "^4.4.0",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.25.3",
+    "react-multi-carousel": "^2.8.0",
     "react-transition-group": "^4.4.2",
     "sharp": "^0.30.1",
     "swr": "^1.2.2",
