--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,36 @@
 {
   "extends": [
-    "next/core-web-vitals",
-    "eslint:recommended",
-    "plugin:@typescript-eslint/recommended"
+    "eslint-config-airbnb",
+    "eslint-config-prettier",
+    "eslint-config-next"
   ],
-  "root": true,
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint"]
+
+  "plugins": [
+    "eslint-plugin-react",
+    "eslint-plugin-jsx-a11y",
+    "eslint-plugin-react",
+    "eslint-plugin-react-hooks",
+    "@typescript-eslint/eslint-plugin"
+  ],
+  "rules": {
+    "react-hooks/exhaustive-deps": "Off",
+    "react/react-in-jsx-scope": "off",
+    "import/extensions": "Off",
+    "linebreak-style": "off",
+    "semi": "off",
+    "react/jsx-filename-extension": [
+      1,
+      { "extensions": [".ts", ".tsx", ".js", ".jsx"] }
+    ],
+    "comma-dangle": "off",
+    "object-curly-newline": "off",
+    "import/prefer-default-export": "off",
+    "react/jsx-props-no-spreading": "off",
+    "react/jsx-no-bind": "Off",
+    "no-console": "off"
+  },
+  "globals": {
+    "JSX": true
+  }
 }
