--- a/.prettierrc
+++ b/.prettierrc
@@ -6,6 +6,8 @@
   "singleQuote": true,
   "trailingComma": "none",
   "bracketSpacing": true,
-  "jsxBracketSameLine": true,
-  "fluid": false
+  "jsxBracketSameLine": false,
+  "fluid": false,
+  "bracketSameLine": false,
+  "endOfLine": "lf"
 }
