--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier -l"
   },
   "dependencies": {
+    "@consta/uikit": "^3.18.0",
     "@hookform/resolvers": "^2.8.8",
     "axios": "^0.25.0",
     "classnames": "^2.3.1",
     "dayjs": "^1.10.7",
+    "eslint-config-airbnb": "^19.0.4",
     "next": "^12.1.0",
     "next-pwa": "^5.4.4",
     "react": "17.0.2",
@@ -26,13 +29,17 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^12.1.0",
     "@types/node": "17.0.14",
     "@types/react": "17.0.39",
     "@types/react-transition-group": "^4.4.4",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
-    "eslint": "^8.10.0",
+    "eslint": "8.2.0",
     "eslint-config-next": "12.0.10",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-react": "7.28.0",
+    "eslint-plugin-react-hooks": "4.3.0",
     "prettier": "^2.5.1",
     "sass": "^1.49.7",
     "typescript": "^4.5.5"
