--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,6 @@ Flask-Cors==3.0.10
 flask-swagger-ui==3.36.0
 gunicorn==20.1.0
 psycopg2-binary==2.9.3
-pydantic
-validate_email
 validate-email==1.3 
 pydantic==1.9.0
+Werkzeug~=2.0.0
