--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,7 +28,9 @@
     "import/prefer-default-export": "off",
     "react/jsx-props-no-spreading": "off",
     "react/jsx-no-bind": "Off",
-    "no-console": "off"
+    "no-console": "off",
+    "react/require-default-props": "off",
+    "react/no-array-index-key": "off"
   },
   "globals": {
     "JSX": true
