--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "format": "prettier -l"
   },
   "dependencies": {
-    "@consta/uikit": "^3.18.0",
     "@hookform/resolvers": "^2.8.8",
     "axios": "^0.25.0",
     "classnames": "^2.3.1",
@@ -26,6 +25,7 @@
     "react-transition-group": "^4.4.2",
     "sharp": "^0.30.1",
     "swr": "^1.2.2",
+    "cookies-next": "^2.0.4",
     "yup": "^0.32.11"
   },
   "devDependencies": {
