--- a/package.json
+++ b/package.json
@@ -2,35 +2,38 @@
   "name": "osl",
   "private": true,
   "scripts": {
-    "_dev": "next dev",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier -l",
-    "dev":"node server.js"
+    "_dev": "node server.js",
+    "prod": "node server.js NODE_ENV=production",
+    "makesvg": "svgr -d components/icons public/assets --typescript"
   },
   "dependencies": {
     "@hookform/resolvers": "^2.8.8",
     "axios": "^0.25.0",
     "classnames": "^2.3.1",
+    "cookies-next": "^2.0.4",
     "dayjs": "^1.10.7",
     "eslint-config-airbnb": "^19.0.4",
     "next": "^12.1.0",
     "next-pwa": "^5.4.4",
-    "react": "17.0.2",
+    "react": "18",
     "react-bootstrap": "^2.1.2",
     "react-custom-scrollbars-2": "^4.4.0",
-    "react-dom": "17.0.2",
+    "react-dom": "18",
     "react-hook-form": "^7.25.3",
     "react-multi-carousel": "^2.8.0",
     "react-transition-group": "^4.4.2",
     "sharp": "^0.30.1",
     "swr": "^1.2.2",
-    "cookies-next": "^2.0.4",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.1.0",
+    "@svgr/cli": "^6.2.1",
     "@types/node": "17.0.14",
     "@types/react": "17.0.39",
     "@types/react-transition-group": "^4.4.4",
@@ -43,6 +46,7 @@
     "eslint-plugin-react-hooks": "4.3.0",
     "prettier": "^2.5.1",
     "sass": "^1.49.7",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "typescript-plugin-css-modules": "^3.4.0"
   }
 }
